--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>To-Do List<i class="fa fa-plus"></i></h1>
       <input id="newtodo" type="text" placeholder="Add New Todo">
       <ul>
-        <li><span><i class="fa fa-trash"></i> </span>AD Tutorial</li>
-        <li><span><i class="fa fa-trash"></i> </span>TCS Assignment</li>
-        <li><span><i class="fa fa-trash"></i> </span>PCS Resume</li>
+        <li><span><i class="fa fa-trash"></i> </span>Sample Todo 1</li>
+        <li><span><i class="fa fa-trash"></i> </span>Sample Todo 2</li>
+        <li><span><i class="fa fa-trash"></i> </span>Sample Todo 3</li>
       </ul>
     </div>
 
